--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod",
     "server": "live-server public",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
