--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.0",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.8.1",
+    "webpack": "^3.8.1"
+  },
+  "devDependencies": {
+    "jest": "^20.0.4",
+    "live-server": "^1.2.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
