--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.4",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^4.2.0",
     "moment": "^2.19.2",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
@@ -36,12 +37,15 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "cross-env": "^5.0.5",
+    "dotenv": "^4.0.0",
     "jest": "^20.0.4",
     "live-server": "^1.2.0",
     "webpack-dev-server": "^2.5.1"
